--- a/style.css
+++ b/style.css
@@ -2,8 +2,132 @@
 ############################# CONFIGURAÇÕES GLOBAIS ###############################
 ###################################################################################*/
 
-:root{
+:root {
   --primary-color: #031625;
   --secondary-color: #FFFFFF;
   --tertiary-color: #395982;
+}
+
+html, body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
+
+* {
+  box-sizing: border-box;
+  list-style: none;
+  /* border: 1px dashed black; */
+}
+
+.container{
+  width: 100%;
+  margin: 0 auto;
+}
+
+/*#################################################################################
+############################# CONFIGURAÇÕES HEADER ###############################
+###################################################################################*/
+
+
+.header {
+  display: flex;
+  align-items: center;
+  
+  padding: 10px;
+  width: 100%;
+  height: 150px;
+
+  backdrop-filter: blur(10px) saturate(96%);
+  -webkit-backdrop-filter: blur(10px) saturate(96%);
+  background: var(--primary-color);
+  background: linear-gradient(90deg, var(--primary-color) 0%, rgba(3,22,37,1) 35%, var(--tertiary-color) 100%);
+}
+
+.header__thumb {
+  content: url(assets/Images/LOGO.png);
+  object-fit: cover;
+
+  flex: 0 0 150px;
+
+  width: 100px;
+  height: 100px;
+  margin-left: 5rem;
+}
+
+.header__content {
+  flex: 1;
+}
+
+.header__content ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8rem;
+}
+
+.header__content li a{
+  display: flex;
+  flex-direction: column;
+  color: var(--secondary-color);
+  text-decoration: none;
+  align-items: center;
+}
+
+.header__content li a:hover{
+  font-size: x-large;
+}
+
+.header__content li a:hover::before{
+  content: url(assets/fire.svg);
+  width: 2rem;
+}
+
+.header__content li a:hover::after{
+  content: url(assets/firewood.svg);
+  width: 2rem;
+}
+
+.show{
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .header{
+    justify-content: space-between;
+    padding: 10px 20px;
+  }
+  .header__thumb{
+    margin: 0;
+  }
+  .header__content{
+    display: none;
+  }
+  .show{
+    display: block;
+  }
+}
+
+/*#################################################################################
+############################# CONFIGURAÇÕES HERO ###############################
+###################################################################################*/
+.section--inicio .section__title{
+  font-family: 'Inter', sans-serif;
+  font-size: 15em;
+  position: absolute;
+  color: var(--secondary-color);
+  border: 1px dashed;
+}
+
+.section--inicio .thumb{
+  content: url(assets/Images/inicio.jpg);
+  object-fit: cover;
+  width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .section--inicio .section__title{
+    font-size: 3em;
+  }
 }
