--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@
   --tertiary-color: #395982;
 }
 
-html, body {
-  overflow-x: hidden;
-}
 body {
   position: relative;
 }
@@ -26,6 +23,12 @@ body {
   margin: 0 auto;
 }
 
+.breakrow{
+  width: 100%;
+  height: 25px;
+  background-color: black;
+}
+
 /*#################################################################################
 ############################# CONFIGURAÇÕES HEADER ###############################
 ###################################################################################*/
@@ -33,27 +36,30 @@ body {
 
 .header {
   display: flex;
+  position: sticky;
+  top: 0;
   align-items: center;
-  
-  padding: 10px;
+  padding: 10px; 
   width: 100%;
-  height: 150px;
+  height: 125px;
 
-  backdrop-filter: blur(10px) saturate(96%);
-  -webkit-backdrop-filter: blur(10px) saturate(96%);
-  background: var(--primary-color);
-  background: linear-gradient(90deg, var(--primary-color) 0%, rgba(3,22,37,1) 35%, var(--tertiary-color) 100%);
+  backdrop-filter: blur(19px) saturate(167%);
+  -webkit-backdrop-filter: blur(19px) saturate(167%);
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 10%, rgba(12, 8, 71, 0.85) 35%, rgba(36, 92, 148, 0.75) 100%);
 }
 
 .header__thumb {
-  content: url(assets/Images/LOGO.png);
-  object-fit: cover;
+  background-image: url("assets/Images/LOGO.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
-  flex: 0 0 150px;
+  border-radius: 50%;
 
-  width: 100px;
-  height: 100px;
-  margin-left: 5rem;
+  width: 105px;
+  height: 105px;
+  margin-left: 10rem;
 }
 
 .header__content {
@@ -89,8 +95,8 @@ body {
   width: 2rem;
 }
 
-.show{
-  display: none;
+.hidden{
+  display: none !important;
 }
 
 @media only screen and (max-width: 600px) {
@@ -99,35 +105,231 @@ body {
     padding: 10px 20px;
   }
   .header__thumb{
-    margin: 0;
+    margin: 3rem;
+    width: 100px;
+    height: 100px;
   }
   .header__content{
     display: none;
   }
-  .show{
-    display: block;
+  
+  .hidden{
+    display: block !important;
   }
 }
 
 /*#################################################################################
 ############################# CONFIGURAÇÕES HERO ###############################
 ###################################################################################*/
-.section--inicio .section__title{
-  font-family: 'Inter', sans-serif;
-  font-size: 15em;
-  position: absolute;
-  color: var(--secondary-color);
-  border: 1px dashed;
+.section--inicio{
+  background-image: url(assets/Images/inicio.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  object-fit: fill;
+  width: 100%;
+  padding: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
 
-.section--inicio .thumb{
-  content: url(assets/Images/inicio.jpg);
-  object-fit: cover;
-  width: 100%;
+.section--inicio div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+.section--inicio .section__title{
+  font-family: 'Inter', sans-serif;
+  font-size: 10em;
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+  color: var(--secondary-color);
+  margin: 0;
+}
+
+.section--inicio .section__text{
+  font-family: 'Inter', sans-serif;
+  font-size: 2em;
+  color: var(--secondary-color);
+  display: inline-block;
+  text-align: center;
+  text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+}
+
+.section--inicio .line{
+  display: block;
+  width: 500px;
+  height: 5px;
+  background-color: #FFFFFF;
+  color: var(--secondary-color);
+}
+
+.section--inicio a{
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding: 2rem;
+  color: var(--secondary-color);
+  background-color: var(--tertiary-color);
+  font-size: 1.5rem;
+  text-decoration: none;
+}
+
+.section--inicio a:hover{
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+}
+
+.section--inicio a span{
+  display: inline-block;
+  width: 100px;
+  height: 4px;
+  border-radius: 1px;
+  background-color: #FFFFFF;
+  color: var(--secondary-color);
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
 
 @media only screen and (max-width: 600px) {
   .section--inicio .section__title{
     font-size: 3em;
+  }
+
+  .section--inicio .line{
+    display: block;
+    width: 100%;
+    background-color: #FFFFFF;
+  }
+
+  .section--inicio .section__text{
+    font-size: 1.3em;
+  }
+
+  .section--inicio a{
+    width: 100%;
+    height: 60px;
+    color: var(--secondary-color);
+    background-color: var(--tertiary-color);
+    font-size: 1rem;
+    text-decoration: none;
+  }
+
+  .section--inicio a span{
+    width: 50px;
+  }
+}
+
+
+/*#################################################################################
+############################# CONFIGURAÇÕES MENU ##################################
+###################################################################################*/
+
+.section--menu{
+  display: flex;
+  background-color: antiquewhite;
+  width: 100%;
+}
+
+.section--menu .section__title{
+  background-image: url(assets/Images/menu.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  object-fit: fill;
+  width: 30%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 0;
+
+  color: #FFFFFF;
+  font-size: 5rem;
+}
+
+.section--menu .section__content{
+  padding: 1rem;
+  display: flex;
+  gap: 5rem;
+  width: 100%;
+}
+
+.section--menu__menu{
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.section--menu__menu div{
+  flex: 1 0 50px;
+  background: #395982;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--secondary-color);
+  font-size: 1.5em;
+  border: 0.5px solid gray;
+}
+
+.section--menu__itensDisplay{
+  background-color: #395982;
+  flex: 3;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.section--menu__itensDisplay .line{
+  display: inline-block;
+  width: 70%;
+  border: 1px dashed white;
+  color: var(--secondary-color);
+  margin: 0 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .section--menu{
+    flex-direction: column;
+  }
+
+  .section--menu .section__title{
+    width: 100%;
+    height: 200px;
+  }
+
+  .section--menu .section__content{
+    padding: 1rem;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .section--menu__menu{
+   flex-direction: row;
+   flex: 1 0 50px;
+  }
+
+  .section--menu__menu div{
+    height: 50px;
+    background: #395982;
+    font-size: 1rem;
+    border: 1px solid gray;
+  }
+
+  .section--menu__itensDisplay{
+    font-size: 1.2rem;
+  }
+
+  .section--menu__itensDisplay .line{
+    display: inline-block;
+    width: 60%;
+    margin: 0 5px;
   }
 }
